Fix alignment issue with navigation

--- a/style/header.less
+++ b/style/header.less
@@ -23,6 +23,7 @@ header{
     ul{
 
       list-style-type: none;
+      padding:0;
 
       li{
 
